feat: 미리보기 이미지 추가

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
-<html lang="kr">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="./favicon.ico" />
+    <link rel="apple-touch-icon" href="./thumbnail.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <title>Ewha Festa 2025</title>
+
+    <!-- 썸네일 및 정보 -->
     <meta property="og:url" content="https://www.ewhafesta.co.kr/" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://ifh.cc/g/B83vdd.jpg" />
+    <meta
+      property="og:image"
+      content="https://festival-bucket.s3.ap-northeast-2.amazonaws.com/ewhafesta_thumbnail/Frame+953.jpg"
+    />
     <meta property="og:title" content="Ewha Festa 2025" />
     <meta
       property="og:description"
